--- a/manifest.plist
+++ b/manifest.plist
@@ -11,31 +11,31 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/codinga-io/testapp/myapp.ipa/string>
+					<string>https://github.com/codinga-io/clickappsipa/releases/download/1.0/clickApps.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/codinga-io/testall/myapp.png</string>
+					<string>https://github.com/codinga-io/clickappsipa/icon-1024.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/codinga-io/testall/myapp.png</string>
+					<string>https://github.com/codinga-io/clickappsipa/icon-1024.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>codinga.test.app</string>
+				<string>codinga.click.Apps</string>
 				<key>bundle-version</key>
-				<string>0.0.1</string>
+				<string>0.0.8</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>MyApp</string>
+				<string>clickApps</string>
 			</dict>
 		</dict>
 	</array>
