--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/codinga-io/clickappsipa/releases/download/1.0/clickApps.ipa</string>
+					<string>https://github.com/codinga-io/testapp/releases/download/1.0/MyApp.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,13 +29,13 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>codinga.click.Apps</string>
+				<string>codinga.test.app</string>
 				<key>bundle-version</key>
-				<string>0.0.8</string>
+				<string>0.0.1</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>clickApps</string>
+				<string>MyApp</string>
 			</dict>
 		</dict>
 	</array>
